[package]
name = "nghttp2-sys"
version = "0.1.0"
edition = "2024"
authors = ["Divy Srivastava <me@littledivy.com>"]
repository = "https://github.com/denoland/nghttp2-sys"
homepage = "https://github.com/denoland/nghttp2-rs"
description = "nghttp2 FFI bindings"
readme = "README.md"
license = "MIT"

[lib]
doctest = false

[dependencies]
libc = '0.2'

[build-dependencies]
cc = "1.0.24"
bindgen = "0.71"
